Refactor WeatherPlugin and improve error handling
Removed Configs.cs and Plugin.cs, replacing them with APIConfig.cs and WeatherPlugin.cs respectively. Refactored WeatherData.cs to a record type. Updated WeatherPlugin.csproj to include FluentResults and correct XML formatting. Enhanced WeatherRequestInjection.cs to configure HttpClient with APIConfig settings and register APIConfig as a singleton. Refactored WeatherHttpClient.cs to use constructor injection and return Result<WeatherData> with FluentResults. Added IWeatherService.cs to define the IWeatherService interface. Updated WeatherPlugin class to use new WeatherHttpClient and APIConfig, handling requests asynchronously with improved error handling and logging.

--- a/WeatherPlugin.csproj
+++ b/WeatherPlugin.csproj
@@ -1,17 +1,18 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-    <TargetFramework>net8.0</TargetFramework>
-    <ImplicitUsings>enable</ImplicitUsings>
-    <Nullable>enable</Nullable>
-	  <CopyLocalLockFileAssemblies>true</CopyLocalLockFileAssemblies>
-  </PropertyGroup>
+    <PropertyGroup>
+        <TargetFramework>net8.0</TargetFramework>
+        <ImplicitUsings>enable</ImplicitUsings>
+        <Nullable>enable</Nullable>
+        <CopyLocalLockFileAssemblies>true</CopyLocalLockFileAssemblies>
+    </PropertyGroup>
 
-  <ItemGroup>
-    <PackageReference Include="CounterStrikeSharp.API" Version="1.0.276" />
-    <PackageReference Include="Microsoft.Extensions.Http" Version="8.0.1" />
-    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
-    <PackageReference Include="System.Net.Http" Version="4.3.4" />
-  </ItemGroup>
+    <ItemGroup>
+        <PackageReference Include="CounterStrikeSharp.API" Version="1.0.276" />
+        <PackageReference Include="FluentResults" Version="3.16.0" />
+        <PackageReference Include="Microsoft.Extensions.Http" Version="8.0.1" />
+        <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+        <PackageReference Include="System.Net.Http" Version="4.3.4" />
+    </ItemGroup>
 
 </Project>
